--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Edit at https://www.gitignore.io/?templates=unity
 
 ### Unity ###
-#[Ll]ibrary/
+[Ll]ibrary/[Mm]etadata
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
